removed autocomplete background, and fixed overlapping label

--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -127,6 +127,19 @@
 
     }
 
+    input:-webkit-autofill,
+    input:-webkit-autofill:hover,
+    input:-webkit-autofill:focus
+    textarea:-webkit-autofill,
+    textarea:-webkit-autofill:hover
+    textarea:-webkit-autofill:focus,
+    select:-webkit-autofill,
+    select:-webkit-autofill:hover,
+    select:-webkit-autofill:focus {
+        -webkit-box-shadow: 0 0 0px 1000px white inset;
+    }
+
+
 // Components ==================================================================
 
     // Common ==================================================================
